<?xml version="1.0" encoding="UTF-8"?>
<!--
 Copyright 2016 The Android Open Source Project

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->

<resources>
    <string name="alarm_saved">Monitor Scheduled at %1$2d:%2$02d</string>
    <string name="alarm_deleted">Monitor Deleted at %1$2d:%2$02d</string>
    <string name="alarm_went_off">Monitor Alerted at %1$2d:%2$02d</string>
    <string name="time_24hour_format">Monitor Event %1$2d:%2$02d</string>
    <string name="ok">Add Watchdog</string>
    <string name="wifi_monitor">Wifi Monitor</string>
    <string name="bluetooth_monitor">Bluetooth Monitor</string>
    <string name="network_monitor">Network Monitor</string>
    <string name="sdcard_monitor">SD Card Monitor</string>
    <string name="battery_monitor">Battery Monitor</string>
    <string name="accounts_monitor">Accounts Monitor</string>
    <string name="cancel">Cancel Watchdog</string>
    <string name="registered_monitors">Watchdog: Top Five Application Event Monitors</string>
</resources>
